# texflow-mcp

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  server.py
docs/architecture/: adr.yaml
docs/architecture/tools/: ADR-200-section-targeted-ingestion-and-destructive-action-guards.md  ADR-201-hybrid-latex-authoring-with-template-library.md  ADR-202-template-library-expansion-and-system-capability-detection.md  ADR-203-document-style-presets-and-style-stack.md
tests/: test_capabilities.py  test_compiler.py  test_formatters.py  test_ingestion.py  test_model.py  test_queue.py  test_serializer.py  test_styles.py  test_templates.py  test_tex_ingestion.py  test_tools.py  test_workflow.py
tests/fixtures/: sample.md
texflow/: __init__.py  capabilities.py  compiler.py  formatters.py  ingestion.py  model.py  serializer.py  styles.py  templates.py  tex_ingestion.py
texflow/data/: class_defaults.json  font_map.json
texflow/data/latex_reference/: README.md  build_reference_data.py  metadata.json
texflow/data/latex_reference/commands/: citations.json  math.json  package-mappings.json  sectioning.json
texflow/data/latex_reference/errors/: patterns.json
texflow/data/latex_reference/symbols/: greek.json  math.json
texflow/data/styles/: classic-serif.yaml  colorband-teal.yaml  dark-academia.yaml  midnight.yaml  minimal.yaml  modern-blue.yaml  newsletter.yaml  ocean-depth.yaml  soft-rose.yaml  sunbeam.yaml  technical.yaml  warm-earth.yaml
texflow/data/templates/callouts/: tcolorbox-note.tex  tcolorbox-theorem.tex
texflow/data/templates/charts/: gantt-chart.tex  pgfplots-piechart.tex
texflow/data/templates/code/: algorithm-pseudocode.tex  listings-styled.tex  minted-listing.tex
texflow/data/templates/diagrams/: pgfplots-barchart.tex  pgfplots-lineplot.tex  (+4 more)
texflow/formatters/: __init__.py  document.py  layout.py  primitives.py  render.py
texflow/tools/: __init__.py  document.py  edit.py  layout.py  queue.py  reference.py  render.py  state.py  workflow.py
(+19 files in other folders)
