[project]
name = "texflow"
version = "1.0.0"
description = "LaTeX document compiler with MCP interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "mistune>=3.2.0",
]

[project.scripts]
texflow = "server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["texflow*"]}}
py-modules = ["server"]
include-package-data = true

[tool.setuptools.package-data]
texflow = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
