[project]
name = "texflow-mcp"
version = "1.6.3"
description = "LaTeX document compiler with MCP interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Aaron Bockelie", email = "aaronsb@users.noreply.github.com"},
]
keywords = ["mcp", "latex", "document", "typesetting", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "fastmcp>=3.0.0",
    "mistune>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/aaronsb/texflow-mcp"
Repository = "https://github.com/aaronsb/texflow-mcp"
Issues = "https://github.com/aaronsb/texflow-mcp/issues"

[project.scripts]
texflow = "server:main"
texflow-mcp = "server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["texflow*"]}}
py-modules = ["server"]
include-package-data = true

[tool.setuptools.package-data]
texflow = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
